fixed alignment of inputs in edit server module

--- a/react-app/src/components/Server/EditServer.module.css
+++ b/react-app/src/components/Server/EditServer.module.css
@@ -44,6 +44,13 @@
     text-shadow: 1px 1px 1px black, 2px 2px 2px black;
 }
 
+.inputWrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
 .nameWrapper {
     display: flex;
     align-items: flex-end;
